add web service users

--- a/src/app/components/loginout/loginout.component.html
+++ b/src/app/components/loginout/loginout.component.html
@@ -23,7 +23,7 @@
         <ng-template #deconnect>
             <label style="margin-left:20px; margin-top:10px; margin-bottom: 10px;">login : {{this.authService.getUser().email}}</label> 
             <div >
-                <a class="btn btn-primary" (click)="deconnexion()"> Deconnexion </a>
+                <a class="btn btn-primary" (click)="disconnect()"> Deconnexion </a>
             </div>
         </ng-template>
     </div>
