--- a/src/app/components/customer/customer.component.html
+++ b/src/app/components/customer/customer.component.html
@@ -25,5 +25,6 @@
         </div>
             <button type="submit" class="btn btn-primary">Next</button>        
         </form>
+        <div class="text-danger"> {{error}}</div>
     </div>
 </div>
