--- a/src/app/components/training/training.component.html
+++ b/src/app/components/training/training.component.html
@@ -3,7 +3,7 @@
         <form [formGroup]="myForm" (ngSubmit)="onAddTraining(myForm)">
         <div *ngIf="myForm.value.id" class="form-group">
             <label class="control-label">Id : </label>
-            <input type="text" formControlName="id" class="form-control">
+            <input type="text" formControlName="id" class="form-control" readonly>
         </div>  
         <div class="form-group">
             <label class="control-label">Nom de la formation : </label>
