add typescript comments

--- a/src/app/components/training/training.component.html
+++ b/src/app/components/training/training.component.html
@@ -18,8 +18,8 @@
             <input type="text" formControlName="price" class="form-control">
         </div>   
         <div *ngIf="this.authService.isAdmin()">
-            <button *ngIf="!status" type="submit" class="btn btn-primary">Ajouter en Base</button>
-            <button *ngIf="status" type="submit" class="btn btn-primary">Mise à jour</button>
+            <button *ngIf="!status" type="submit" class="btn btn-primary btn-sm">Ajouter en Base</button>
+            <button *ngIf="status" type="submit" class="btn btn-primary btn-sm">Mise à jour</button>
             <div class="text-danger"> {{error}}</div>     
         </div>         
         </form>
