--- a/src/app/components/trainings/trainings.component.html
+++ b/src/app/components/trainings/trainings.component.html
@@ -12,16 +12,16 @@
                     <td>{{training.name}}</td>    
                     <td>{{training.description}}</td>
                     <td>{{training.price}}</td>
-                    <td> <input type="number" name="quantity" style="width: 60px" [(ngModel)]="training.quantity" > </td>
+                    <td> <input type="number" name="quantity" style="width: 60px" [(ngModel)]="training.quantity" min="1" max="10" > </td>
                     <td> 
-                        <a class="btn btn-primary" (click)="onAddToCart(training)"> 
+                        <a class="btn btn-outline-primary btn-sm" (click)="onAddToCart(training)"> 
                             <i class="fa fa-shopping-cart"></i> Ajouter
                         </a>                        
                     </td>
                     <td *ngIf="this.authService.isAdmin()"> 
-                        <a class="btn btn-danger" (click)="onDeleteTraining(training)"> Supprimer </a></td>
+                        <a class="btn btn-outline-danger btn-sm" (click)="onDeleteTraining(training)"> Supprimer </a></td>
                     <td *ngIf="this.authService.isAdmin()"> 
-                        <a class="btn btn-secondary" (click)="onUpdateTraining(training)"> Mise à jour </a></td>
+                        <a class="btn btn-outline-secondary btn-sm" (click)="onUpdateTraining(training)"> Mise à jour </a></td>
                 </tr>
             </tbody>
         </table>    
