--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,6 +1,7 @@
 
 <div class="container">
   <ng-container *ngIf="!empty_cart else display_empty_cart">
+    <h2 class="text-center">Mon panier</h2>
         <table class="table table-sm">
           <thead>
             <tr>
