--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,1 +1,38 @@
-<p>Console d'administration pour ajouter des utilisateurs par exemple</p>
+<div class="container">
+    <div class="col-md-3">
+        <h2 class="text-center">Créer un utilisateur</h2>
+        <form [formGroup]="myForm" (ngSubmit)="onAddUser(myForm)">                        
+            <div class="form-group">
+                <label class="control-label">Email :</label>
+                <input type="email" formControlName="email" class="form-control" placeholder="Entrez l'email">
+                <div *ngIf="myForm.get('email')?.touched && myForm.get('email')?.invalid" class="text-danger">
+                    <div *ngIf="myForm.get('email')?.errors?.['required']">L'email est requis.</div>
+                    <div *ngIf="myForm.get('email')?.errors?.['email']">L'email n'est pas valide.</div>
+                </div>
+            </div>
+            
+            <div class="form-group">
+                <label class="control-label">Mot de passe :</label>
+                <input type="password" formControlName="password" class="form-control" placeholder="Entrez le mot de passe">
+                <div *ngIf="myForm.get('password')?.touched && myForm.get('password')?.invalid" class="text-danger">
+                    <div *ngIf="myForm.get('password')?.errors?.['required']">Le mot de passe est requis.</div>
+                    <div *ngIf="myForm.get('password')?.errors?.['minlength']"> Le mot de passe doit contenir au moins 6 caractères. </div>
+                </div>
+            </div>
+            
+            <div class="form-group">
+                <label class="control-label">Confirmer le mot de passe :</label>
+                <input type="password" formControlName="confirmPassword" class="form-control" placeholder="Confirmez le mot de passe">
+                <div *ngIf="myForm.get('confirmPassword')?.touched && myForm.hasError('passwordMismatch')" class="text-danger">
+                    Les mots de passe ne correspondent pas.
+                </div>
+            </div>
+            
+            <div>
+                <button type="submit" class="btn btn-primary btn-sm" [disabled]="myForm.invalid">Ajouter l'utilisateur</button>
+                <div *ngIf="successMessage" class="alert alert-success"> {{ successMessage }} </div>                             
+                <div *ngIf="error" class="alert alert-danger">  {{ error }} </div>
+            </div>
+        </form>
+    </div>
+</div>
